<resources>
    <string name="app_name">IndividualProject</string>
    <string name="emailWelcome">Email Address</string>
    <string name="passwordWelcome">Password</string>
    <string name="loginButtonText">Login</string>
    <string name="registerButtonText">Register</string>
    <string name="registerName">Name</string>
    <string name="registerEmail">Email Address</string>
    <string name="registerPassword">Password</string>
    <string name="registerButton2Text">Register</string>
    <string name="backToLogin">Back</string>
    <string name="welcomeMessage">Welcome</string>
    <string name="logoutButton">Logout</string>
    <string name="registerHomeAddress">Home Address</string>
    <string name="registerWorkAddress">Work Address</string>
    <string name="testLogin">dps@hotmail.co.uk</string>
    <string name="testPassword">dave</string>
    <string name="registerGymAddress">Gym Address</string>

</resources>
