<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/registerName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:hint="@string/registerName"
            android:padding="10dp"
            android:maxLines="1" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/registerEmail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:maxLines="1" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/registerPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:maxLines="1" />

        <!-- Login Button -->

        <Button
            android:id="@+id/registerButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/registerButton2Text"
  />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/backToLogin"
            android:textAllCaps="false"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>